@@ -1,5 +1,18 @@
 package com.petersalomonsen.jjack.javasound;
 
+/*
+ * Project: JJack - Java bridge API for the JACK Audio Connection Kit
+ * Class:   BlockingByteFIFO
+ * Version: 0.3
+ *
+ * Date:    2007-04-09
+ *
+ * Licensed under the GNU Lesser General Public License (LGPL).
+ * This comes with NO WARRANTY. See file license.txt for details.
+ *
+ * Author:  Peter Johan Salomonsen
+ */
+
 /**
  * A FIFO byte buffer that blocks on read or write if trying to read or write
  * more than is available for reading/writing.
