@@ -1,5 +1,16 @@
 package com.petersalomonsen.jjack.javasound;
-
+/*
+ * Project: JJack - Java bridge API for the JACK Audio Connection Kit
+ * Class:   SourceJJackLine
+ * Version: 0.3
+ *
+ * Date:    2007-04-09
+ *
+ * Licensed under the GNU Lesser General Public License (LGPL).
+ * This comes with NO WARRANTY. See file license.txt for details.
+ *
+ * Author:  Peter Johan Salomonsen
+ */
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.nio.ShortBuffer;
@@ -10,6 +21,11 @@ import javax.sound.sampled.SourceDataLine;
 
 import de.gulden.framework.jjack.JJackSystem;
 
+/**
+ * JJack SourceDataLine implementation
+ * @author Peter Johan Salomonsen
+ *
+ */
 public class SourceJJackLine extends JJackLine implements SourceDataLine {
 	
 	AudioFormat audioFormat = new AudioFormat(JJackSystem.getSampleRate(),16,2,true,false);
@@ -122,4 +138,8 @@ public class SourceJJackLine extends JJackLine implements SourceDataLine {
 		return floatBuffer;
 	}
 
+	boolean canReadFloat(int length)
+	{
+		return fifo.availableRead() >= length*2;
+	}
 }
